Thu Dec  2 11:10:31 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	--internal now notices when the database has been
				updated

Wed Dec  1 22:29:33 GMT 2004 (njh)
----------------------------------
  * clamav-milter:	Added --internal flag (some functionality to do)
			SESSIONS: Don't hang when StreamMaxLength is hit

Wed Dec  1 21:05:07 CET 2004 (tk)
---------------------------------
  * libclamav/scanners.c: improved recursion limits (thanks to Maxim Dounin)

Wed Dec  1 13:14:33 GMT 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Decode text/plain parts marked as being encoded,
		reported by Trog

Wed Dec  1 12:14:46 GMT 2004 (njh)
----------------------------------
  * libeclamav/message.c:	Part of rule 3 of paragraph 5.1 of RFC1521 was
		not being implemented, which meant that quoted-printable
		attachments with spaces before the '=' character at the end
		of soft breakon lines where not being correctly decoded

Tue Nov 30 16:47:54 CET 2004 (tk)
---------------------------------
  * improved support for BSDI BSD/OS (access to test environment provided by
    David Wu <dyw*iohk.com>)

Tue Nov 30 12:06:12 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Better handling for  unbalanced quotes in
			headers, e.g.  name="foo.doc

Mon Nov 29 13:25:25 GMT 2004 (njh)
----------------------------------
  * libclamav/blob.c:	Fix potential crash if a temporary file can't be
	created
  * libclamav/mbox.c:	Disable the old continuation marker detection scheme

Mon Nov 29 00:23:55 CET 2004 (tk)
---------------------------------
  * clamdscan: add support for --move and --remove options

Sun Nov 28 21:08:44 GMT 2004 (njh)
----------------------------------
  * libclamav:	Email headers of only white space are no longer treated as
		the end of the headers

Sun Nov 28 16:30:18 GMT 2004 (njh)
----------------------------------
  * libclamav/message.c:	Allow lower case hex in quoted-printable
			messages
