@@ -19,8 +19,10 @@
 #ifndef __UPX_H
 #define __UPX_H
 
-int upx_inflate2b(char *, int , char *, int);
-int upx_inflate2d(char *, int , char *, int);
-int upx_inflate2e(char *, int , char *, int);
+#include "cltypes.h"
+
+int upx_inflate2b(char *, int, char *, int *, uint32_t, uint32_t, uint32_t);
+int upx_inflate2d(char *, int, char *, int *, uint32_t, uint32_t, uint32_t);
+int upx_inflate2e(char *, int, char *, int *, uint32_t, uint32_t, uint32_t);
 
 #endif
