@@ -1,3 +1,8 @@
+Fri Dec  3 03:32:17 CET 2004 (tk)
+---------------------------------
+  * libclamav: attempt to rebuild PE structure from UPX compressed files
+	       (code from aCaB)
+
 Thu Dec  2 11:10:31 GMT 2004 (njh)
 ----------------------------------
   * clamav-milter:	--internal now notices when the database has been
